Add song like feature and implement a new liked songs page

--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -8,6 +8,12 @@ body {
     background-color: #121212;
 }
 
+.recommendations-title{
+    text-align: center;
+    color: #ffffff;
+    margin: 20px 0;
+}
+
 .top-songs-title {
     text-align: center;
     color: #ffffff;
