--- a/app/views/templates/uploaded_songs.html
+++ b/app/views/templates/uploaded_songs.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="main-content">
-        <h1>My Songs</h1>
+        <h1>My Uploaded Songs</h1>
         <table id="search-results">
             <thead>
                 <tr>
