--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -24,9 +24,9 @@
         <ul>
             <li><a href="{{ url_for('main.home') }}">Home</a></li>
             <li><a href="{{ url_for('main.explore') }}" class="btn btn-primary">Explore</a></li>
-            <li><a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload Song</a></li>
-            <li><a href="{{ url_for('music.my_songs') }}" class="btn btn-primary">My Songs</a></li>
-            <li><a href="#library">Library</a></li>
+            <li><a href="{{ url_for('music.liked_songs') }}" class="btn btn-primary">Liked Songs</a></li>
+            <li><a href="{{ url_for('music.uploaded_songs') }}" class="btn btn-primary">Uploaded Songs</a></li>
+            <li><a href="{{ url_for('music.upload_song') }}" class="btn btn-primary">Upload New Song</a></li>
         </ul>
 
         <ul class="bottom-links" id="sidebar-bottom-links">
@@ -52,6 +52,7 @@
 
         <div class="search-container">
             <input type="text" id="song-search" placeholder="Search...">
+            <button id="search-button">Search</button>
         </div>
         <table id="search-results">
             <thead>
@@ -61,6 +62,7 @@
                     <th>Uploaded By</th>
                     <th>Popularity</th>
                     <th>Filepath</th>
+                    <th>Liked</th>
                 </tr>
             </thead>
             <tbody>
