--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -1,11 +1,73 @@
-body, h1, h2, h3, ul, li {
+* {
     margin: 0;
     padding: 0;
-    color: #ffffff;
+    box-sizing: border-box;
 }
 
-body {
+body, h1, h2, h3{
+    color: #ffffff;
     background-color: #121212;
+    font-family: Arial, sans-serif;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #333;
+    color: #fff;
+    z-index: 1000;
+}
+
+#sidebar .logo {
+    padding: 20px;
+    background: #222;
+    display: block;
+    text-align: center;
+}
+
+#sidebar .logo img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; }
+
+#sidebar ul {
+    list-style: none;
+    padding: 15px 0;
+    margin: 0;
+}
+
+#sidebar ul li {
+    padding: 0px 15px;
+}
+
+#sidebar ul li a {
+    color: #ddd;
+    text-decoration: none;
+    align-items: center;
+    display: block;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 20px;
+    transition: background-color 0.3s; }
+
+#sidebar ul li a:hover,
+#sidebar ul li a.active {
+    background: #555;
+    color: #fff; }
+
+#sidebar .bottom-links {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.main-content {
+    margin-left: 250px;
+    padding: 40px;
 }
 
 .recommendations-title{
