--- a/app/views/static/mySongsStyles.css
+++ b/app/views/static/mySongsStyles.css
@@ -14,6 +14,72 @@ h1 {
     margin: 20px 0;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #333;
+    color: #fff;
+    z-index: 1000;
+}
+
+#sidebar .logo {
+    padding: 20px;
+    background: #222;
+    display: block;
+    text-align: center;
+}
+
+#sidebar .logo img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; }
+
+#sidebar ul {
+    list-style: none;
+    padding: 15px 0;
+    margin: 0;
+}
+
+#sidebar ul li {
+    padding: 0px 15px;
+}
+
+#sidebar ul li a {
+    color: #ddd;
+    text-decoration: none;
+    align-items: center;
+    display: block;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 20px;
+    transition: background-color 0.3s; }
+
+#sidebar ul li a:hover,
+#sidebar ul li a.active {
+    background: #555;
+    color: #fff; }
+
+#sidebar .bottom-links {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.main-content {
+    margin-left: 250px;
+    padding: 40px;
+}
+
 #search-results {
     width: 80%;
     margin: 20px auto;
