--- a/app/views/templates/upload.html
+++ b/app/views/templates/upload.html
@@ -5,60 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Song - Your Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        .login {
-            background:  #0a0a0a;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            background-color: #222;
-            color: #fff;
-        }
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-        .form-container {
-            padding: 2rem;
-        }
-        .btn-primary {
-            background-color: #6fb2d8;
-            border: none;
-            padding: 10px 20px;
-        }
-        .btn-secondary {
-            margin-top: 10px; 
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='uploadStyles.css') }}">
 </head>
 <body class="login">
-    <div class="form-container">
-        <div class="card">
-            <div class="card-body">
-                <form action="{{ url_for('music.save_song') }}" method="post" enctype="multipart/form-data">
-                    <h3 class="card-title text-center mb-4">Upload Song</h3>
-                    <div class="form-group">
-                        <label for="name" class="form-label">Song Name:</label>
-                        <input type="text" id="name" name="name" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="file" class="form-label">Upload Song:</label>
-                        <input type="file" id="file" name="file" class="form-control-file" accept="audio/*" required>
-                    </div>
-                    <div class="text-center">
-                        <input type="submit" value="Upload" class="btn btn-primary btn-block">
-                        <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a>
-                    </div>
-                </form>
+    <nav id="sidebar">
+        <a href="#home" class="logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo">
+        </a>
+        <ul>
+            <li><a href="{{ url_for('main.home') }}" class="btn nav">Home</a></li>
+            <li><a href="{{ url_for('main.explore') }}" class="btn nav">Explore</a></li>
+            <li><a href="{{ url_for('music.liked_songs') }}" class="btn nav">Liked Songs</a></li>
+            <li><a href="{{ url_for('music.uploaded_songs') }}" class="btn nav">Uploaded Songs</a></li>
+            <li><a href="{{ url_for('music.upload_song') }}" class="btn nav">Upload New Song</a></li>
+        </ul>
+
+        <ul class="bottom-links" id="sidebar-bottom-links">
+            <li><a href="{{ url_for('settings.user_settings') }}" class="btn nav" id="btn-settings">Settings</a></li>
+            <li><a href="{{ url_for('auth.logout') }}" class="btn nav" id="btn-logout">Logout</a></li>
+        </ul>
+    </nav>
+    <div class="main-content">
+        <div class="form-container">
+            <div class="card">
+                <div class="card-body">
+                    <form action="{{ url_for('music.save_song') }}" method="post" enctype="multipart/form-data">
+                        <h3 class="card-title text-center mb-4">Upload Song</h3>
+                        <div class="form-group">
+                            <label for="name" class="form-label">Song Name:</label>
+                            <input type="text" id="name" name="name" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="file" class="form-label">Upload Song:</label>
+                            <input type="file" id="file" name="file" class="form-control-file" accept="audio/*" required>
+                        </div>
+                        <div class="text-center">
+                            <input type="submit" value="Upload" class="btn btn-primary btn-block">
+                            <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
