--- a/app/views/templates/liked_songs.html
+++ b/app/views/templates/liked_songs.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='mySongsStyles.css') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Liked Songs</title>
+</head>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='mySongsStyles.css') }}">
     <title>Liked Songs</title>
 </head>
 <body>
+
+    <nav id="sidebar">
+        <a href="#home" class="logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo">
+        </a>
+        <ul>
+            <li><a href="{{ url_for('main.home') }}" class="btn nav">Home</a></li>
+            <li><a href="{{ url_for('main.explore') }}" class="btn nav">Explore</a></li>
+            <li><a href="{{ url_for('music.liked_songs') }}" class="btn nav">Liked Songs</a></li>
+            <li><a href="{{ url_for('music.uploaded_songs') }}" class="btn nav">Uploaded Songs</a></li>
+            <li><a href="{{ url_for('music.upload_song') }}" class="btn nav">Upload New Song</a></li>
+        </ul>
+
+        <ul class="bottom-links" id="sidebar-bottom-links">
+            <li><a href="{{ url_for('settings.user_settings') }}" class="btn nav" id="btn-settings">Settings</a></li>
+            <li><a href="{{ url_for('auth.logout') }}" class="btn nav" id="btn-logout">Logout</a></li>
+        </ul>
+    </nav>
 
     <div class="background-logo">
         <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
@@ -13,7 +38,7 @@
 
     <div class="main-content">
         <h1>My Liked Songs</h1>
-        <table id="liked-songs-results">
+        <table id="search-results">
             <thead>
                 <tr>
                     <th>Name</th>
