--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -56,7 +56,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Upload Date</th>
-                    <th>Uploaded By</th>
+                    <th>Artist</th>
                     <th>Popularity</th>
                     <th>Filepath</th>
                     <th>Liked</th>
