Fix some bugs and finish collaborate features

--- a/app/views/templates/explore.html
+++ b/app/views/templates/explore.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a>
+    <!-- <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a> -->
 
     <script src="{{ url_for('static', filename='explore.js') }}"></script>
 </body>
