--- a/app/views/static/mySongsStyles.css
+++ b/app/views/static/mySongsStyles.css
@@ -98,7 +98,7 @@ h1 {
     background-color: #454545;
 }
 
-.btn-rename, .btn-save, .btn-cancel {
+.btn-rename, .btn-save, .btn-cancel, .btn-add-artists {
     padding: 5px 10px;
     margin-right: 5px;
     border-radius: 4px;
@@ -115,6 +115,14 @@ h1 {
     background-color: #6fb2d8;
 }
 
+.btn-add-artists {
+    background-color: #6fb2d8;
+}
+
+.btn-add-artists:hover {
+    background-color: #6fb2d8;
+}
+
 .btn-save, .btn-cancel {
     background-color: #4a90e2;
 }
@@ -124,6 +132,13 @@ h1 {
 }
 
 .rename-input {
+    padding: 5px;
+    margin-right: 5px;
+    border-radius: 4px;
+    border: 2px solid #ccc;
+}
+
+.add-artists-input {
     padding: 5px;
     margin-right: 5px;
     border-radius: 4px;
@@ -159,4 +174,27 @@ h1 {
     transform: translate(-50%, -50%);
     opacity: 0.2;
     z-index: -1;
+}
+
+.flash-messages-container {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+}
+
+.flashes {
+    display: inline-block;
+    background-color: #333;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.alert {
+    color: white;
+    font-family: 'Arial', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
