--- a/app/views/static/uploadStyles.css
+++ b/app/views/static/uploadStyles.css
@@ -95,3 +95,11 @@ body, html {
 .btn-secondary {
     margin-top: 10px;
 }
+.background-logo {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    opacity: 0.2;
+    z-index: -1;
+}
