--- a/app/views/templates/settings.html
+++ b/app/views/templates/settings.html
@@ -35,6 +35,7 @@
             <div class="card-body">
                 <h3 class="card-title text-center mb-4">User Settings</h3>
                 <p>Email: {{ user.get_email() }}</p>
+                <p>User ID: {{ user.get_id() }}</p>
                 <p>You have been a user for {{ (datetime.utcnow() - user.get_registered_date_time()).days + 1 }} days.</p>
 
                 <form method="post" action="{{ url_for('settings.user_settings') }}">
