--- a/app/views/templates/explore.html
+++ b/app/views/templates/explore.html
@@ -42,7 +42,11 @@
                         {% for song in recommended_songs %}
                         <tr>
                             <td>{{ song.get_name() }}</td>
-                            <td>{{ song.creators }}</td>
+                            <td>
+                                {% for creator in song.creators %}
+                                    <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
+                                {% endfor %}
+                            </td>
                             <td>{{ song.get_popularity() }}</td>
                         </tr>
                         {% endfor %}
@@ -67,7 +71,11 @@
                     {% for song in top_songs %}
                     <tr>
                         <td>{{ song.get_name() }}</td>
-                        <td>{{ song.creators }} </td>
+                        <td>
+                            {% for creator in song.creators %}
+                                <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
                         <td>{{ song.get_popularity() }}</td>
                     </tr>
                     {% endfor %}
