--- a/app/views/templates/liked_songs.html
+++ b/app/views/templates/liked_songs.html
@@ -51,7 +51,11 @@
                 {% for song, liked_date, creators in songs %}
                 <tr>
                     <td>{{ song.get_name() }}</td>
-                    <td>{{ creators }}</td>
+                    <td>
+                        {% for creator in creators %}
+                            <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
                     <td>{{ song.get_popularity() }}</td>
                     <td>{{ liked_date.strftime('%Y-%m-%d') if liked_date else 'N/A' }}</td>
                 </tr>
