--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -4,10 +4,15 @@
     box-sizing: border-box;
 }
 
-body, h1, h2, h3{
-    color: #ffffff;
+body {
     background-color: #121212;
-    font-family: Arial, sans-serif;
+    font-size: 16px;
+}
+
+h1, h2, h3 {
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 #sidebar {
@@ -89,17 +94,30 @@ body, h1, h2, h3{
     width: 80%;
 }
 
-#top-songs, #top-songs-by-genre, #recommended-songs {
+table {
     width: 100%;
     border-collapse: collapse;
-    text-align: center;
+    background-color: #222;
+    margin-top: 20px;
 }
 
-#top-songs th, #top-songs td, #top-songs-by-genre th, #top-songs-by-genre td, #recommended-songs th, #recommended-songs td {
-    border: 1px solid #ddd;
-    padding: 8px;
+th, td {
+    text-align: left;
+    padding: 12px 15px;
+    border-bottom: 1px solid #333;
+}
+
+th {
+    background-color: #1F1F1F;
+    color: #FFF;
+}
+
+td {
+    color: #AAA;
+}
+
+tbody tr:hover {
     background-color: #333333;
-    color: #ffffff;
 }
 
 .genre-search-container {
@@ -139,5 +157,26 @@ body, h1, h2, h3{
     width: auto; 
     font-size: 18px;
     border-radius: 5px;
+}
+
+.card {
+    background-color: #222;
+    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 20px; /* Ensures spacing between cards */
+}
+
+
+@media (min-width: 768px) {
+    .container-fluid .row .col-md-8 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container-fluid .row .col-md-8 .card {
+        flex: 1;
+    }
 }
 
