--- a/app/views/templates/explore.html
+++ b/app/views/templates/explore.html
@@ -27,85 +27,109 @@
         </ul>
     </nav>
     <div class="main-content">
-        {% if recommended_songs %}
-            <h2 class="recommendations-title">Recommended for You</h2>
-            <div class="top-songs-container">
-                <table id="recommended-songs">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Artist</th>
-                            <th>Popularity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for song in recommended_songs %}
-                        <tr>
-                            <td>{{ song.get_name() }}</td>
-                            <td>
-                                {% for creator in song.creators %}
-                                    <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
-                                {% endfor %}
-                            </td>
-                            <td>{{ song.get_popularity() }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        {% else %}
-            <p>{{ recommendation_info }}</p>
-        {% endif %}
+        <div class="container-fluid mt-4">
+            <div class="row">
+                <!-- Left Column -->
+                <div class="col-md-8">
+                    <!-- Recommend Card -->
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            {% if recommended_songs %}
+                                <h2 class="recommendations-title">Recommended for You</h2>
+                                <div class="top-songs-container">
+                                    <table id="recommended-songs">
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Artist</th>
+                                                <th>Popularity</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for song in recommended_songs %}
+                                            <tr>
+                                                <td>{{ song.get_name() }}</td>
+                                                <td>
+                                                    {% for creator in song.creators %}
+                                                        <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
+                                                    {% endfor %}
+                                                </td>
+                                                <td>{{ song.get_popularity() }}</td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            {% else %}
+                                <p>{{ recommendation_info }}</p>
+                            {% endif %}
+                        </div>
+                    </div>
 
-        <h2 class="top-songs-title">Top 20 Popular Songs</h2>
-        <div class="top-songs-container">
-            <table id="top-songs">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Artist</th>
-                        <th>Popularity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for song in top_songs %}
-                    <tr>
-                        <td>{{ song.get_name() }}</td>
-                        <td>
-                            {% for creator in song.creators %}
-                                <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
-                            {% endfor %}
-                        </td>
-                        <td>{{ song.get_popularity() }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        
-        <h2 class="top-songs-title">Discover By Genre</h2>
-        <div class="genre-search-container">
-            <input type="text" id="genre-search" placeholder="Type a Genre...">
-            <div id="genre-search-results">
-            </div>
-        </div>
+                    <!-- Explore Card -->
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h2 class="top-songs-title">Top 20 Popular Songs</h2>
+                                <div class="top-songs-container">
+                                    <table id="top-songs">
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Artist</th>
+                                                <th>Popularity</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for song in top_songs %}
+                                            <tr>
+                                                <td>{{ song.get_name() }}</td>
+                                                <td>
+                                                    {% for creator in song.creators %}
+                                                        <a href="{{ creator.url }}">{{ creator.username }}</a>{% if not loop.last %}, {% endif %}
+                                                    {% endfor %}
+                                                </td>
+                                                <td>{{ song.get_popularity() }}</td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                        </div>
+                    </div>
+                </div>
 
-        <h3 id="top-songs-by-genre-title" class="top-songs-title"></h3>
-        <div class="top-songs-container">
-            <table id="top-songs-by-genre">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Artist</th>
-                        <th>Popularity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+                <!-- Right Column -->
+                <div class="col-md-4">
+                    <!-- Genre-Explore Card -->
+                    <div class="card">
+                        <div class="card-body">
+                            <h2 class="top-songs-title">Discover By Genre</h2>
+                            <div class="genre-search-container">
+                                <input type="text" id="genre-search" placeholder="Type a Genre...">
+                                <div id="genre-search-results">
+                                </div>
+                            </div>
+
+                            <h3 id="top-songs-by-genre-title" class="top-songs-title"></h3>
+                            <div class="top-songs-container">
+                                <table id="top-songs-by-genre">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Artist</th>
+                                            <th>Popularity</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
     <!-- <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a> -->
 
     <script src="{{ url_for('static', filename='explore.js') }}"></script>
