Reformat code for final version

--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}">
-    <title>Login - Your Music App</title>
+    <title>Login - Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='loginStyles.css') }}">
 </head>
 <body class="login">
     <div class="form-container">
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo" alt="Your Music App Logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo" alt="Music App Logo">
         </div>
 
         <div class="card">
