--- a/app/views/templates/user_profile.html
+++ b/app/views/templates/user_profile.html
@@ -27,7 +27,7 @@
 
 
     <div class="background-logo">
-        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Music App Logo" style="width: 300px; height: auto;">
     </div>
 
     <div class="main-content">
