--- a/app/views/templates/register.html
+++ b/app/views/templates/register.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Your Music App</title>
+    <title>Register - Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='registerStyles.css') }}">
 </head>
 <body class="login">
     <div class="background-logo">
-        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Music App Logo" style="width: 300px; height: auto;">
     </div>
 
     <div class="form-container">
