--- a/app/views/templates/test.html
+++ b/app/views/templates/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}">
-    <title>Login - Your Music App</title>
+    <title>Login - Music App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='customStyles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='buttonStyles.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
