--- a/app/views/templates/upload.html
+++ b/app/views/templates/upload.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Song - Your Music App</title>
+    <title>Upload Song - Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='uploadStyles.css') }}">
 </head>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="background-logo">
-        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Music App Logo" style="width: 300px; height: auto;">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
