--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -153,7 +153,7 @@ tbody tr:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 5px;
-    margin-bottom: 20px; /* Ensures spacing between cards */
+    margin-bottom: 20px;
 }
 
 
