--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -54,4 +54,9 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min"></script>
+</body>
+</html>
+
